--- a/Sunduk.PWA/Shared/MainLayout.razor
+++ b/Sunduk.PWA/Shared/MainLayout.razor
@@ -2,6 +2,9 @@
 @inherits LayoutComponentBase
 @using MudBlazor.Services
 
+<BlazorCommon.RazorLib.BlazorCommonInitializer />
+<BlazorTextEditor.RazorLib.BlazorTextEditorInitializer />
+
 <MudThemeProvider />
 <MudPopoverProvider />
 <MudDialogProvider />
